--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -11,7 +11,9 @@ $family-sans-serif: Heebo, sans-serif
 /* Main styles */
 
 html
-  background: $gray-200
+  //background: linear-gradient(180deg, darken($indigo-900, 20%) 0, darken($purple-900, 40%) 40%, darken($pink-900, 20%) 100%)
+  background-color: lighten($gray-200, 0%)
+  background-attachment: fixed
   padding: 0
   margin: 0
   overflow: -moz-scrollbars-vertical
@@ -25,7 +27,6 @@ body
   font-size: .8rem
   line-height: 1.2rem
   font-weight: 400
-  margin-top: 30px
 textarea, input, button, select
   font-size: inherit
   font-family: inherit // FF needs these
@@ -45,77 +46,105 @@ img
 
 /* Typography */
 
-h1,h2, .day_header
-  font-weight: 300
-  color: $gray-400
+h1, h2, .day_header
+  font-weight: 400
+  color: $gray-700
   text-transform: uppercase
 
 h1, .day_header
-  font-size: 2.25rem
-  margin: 1.5rem 0 1rem 0
+  font-size: 1.25rem
+  // margin: 2rem 0 1rem 0
 h2
-  font-size: 1.5rem
+  font-size: 1rem
   margin: 2rem 0
 
 /* Layout */
 
 .container
-  max-width: 1400px
-  margin: 0 auto
-  padding: 0 20px
+  //max-width: 1300px
+  //margin: 0 auto
+
+.nav
+  margin: 0px 0px 20px 0px
+  padding: 20px 20px 10px 20px
+  background: $white
+  .container
+    //
 
 .sticky
-  top: 80px
+  top: 20px
+  margin-top: 75px
   position: sticky
+  //display: none
 
 .day_header
   width: 100%
-  padding: 10px 0 10px 0px
+  padding: 20px 0 15px 40px
+  margin: 40px 0 0 0
   cursor: pointer
-
+  border-bottom: 1px solid $gray-300
+  // position: relative
+  // &::before
+  //   content: ''
+  //   display: inline-block
+  //   height: 10px
+  //   width: 10px
+  //   background-color: $gray-200
+  //   position: absolute
+  //   border-radius: 100%
+  //   left: -20px
+  //   top: 35%
+  .pretty_day
+    color: $gray-400
 .sheet > .day_header:nth-child(2)
   padding-top: 0
 
-.box
-  background-color: $white
-  border-radius: 5px
-
 .box_alt
-  background-color: lighten($gray-200, 2%)
+  background-color: lighten($indigo-100, 5%)
+  padding: 10px 20px 20px 20px
   border-radius: 5px
+  *
+    //outline: 1px solid red
 
-.sheet, .quick_add_form
+.box_filters
+  // background-color: lighten($gray-100, 4%)
+  // border-bottom: 1px solid $gray-300
+  // border-top-left-radius: 5px
+  // border-top-right-radius: 5px
+  // margin: 20px 0px 0px 0px
+  // padding: 10px 30px 10px 30px
+
+.box_sheet
+  background-color: $white
+  border-bottom-left-radius: 5px
+  border-bottom-right-radius: 5px
   margin: 0px 0px 10px 0px
-  padding: 30px 40px 30px 40px
+  padding: 20px 0px 20px 0px
 
 .quick_add_form
-  padding: 30px 20px 30px 20px
+  //margin: 0px 0px 10px 0px
+  //padding: 30px 20px 30px 20px
 
-.filters_form
-  padding: 0px 0px 30px 0px
-  margin: 10px 0px 40px 0px
-  border-bottom: 1px solid $gray-300
 
 .table_row
   display: flex
   flex-direction: row
   flex-grow: 1
 .table_col
-  border-top: 1px solid $gray-300
+  border-bottom: 1px solid $gray-300
   border-: 1px solid $gray-200
-  padding: 15px 5px 13px 5px
+  padding: 15px 2px 13px 2px
   vertical-align: top
   &.task_col_0
-    width: 25px
+    padding-left: 40px
     div
-      width: 100%
-      height: 1.75rem
-      border-radius: 50px
-      margin-left: 0px
+      width: 10px
+      height: 1.5rem
+      border-radius: 20px
+      margin-left: -30px
       margin-right: 5px
-      margin-top: -5px
+      margin-top: -3px
       border: 2px solid white
-      vertical-align: baseline
       &.heat_0
         background-color: #caefff
       &.heat_1
@@ -133,7 +162,8 @@ h2
   &.task_col_3
     width: 100%
   &.task_col_4
-    width: 260px
+    width: 300px
+    padding-right: 40px
   
 
 .task_duration, .task_project, .task_value, .task_client
@@ -164,7 +194,7 @@ h2
     display: none
 
 .highlighted
-  background-color: $purple-100
+  background-color: $gray-100
   .action_icons .icon a
     background: $white
 
@@ -173,12 +203,12 @@ h2
   justify-content: flex-end
 .icon_svg
   img
-    width: 12px
+    width: 14px
     height: auto
-    filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%) // hehe
+    //filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%) // hehe
   a
     transition: color .5s, border-radius .5s, background-color .5s
-    background: $purple-100
+    background: $gray-100
     vertical-align: middle
     align: center
     padding: 5px 6px 4px 6px
@@ -200,18 +230,14 @@ ion-icon
 
 #floating_bar
   display: none
-  text-align: center
-  background-color: rgba($gray-100, .5)
-  color: $gray-600
-  padding: 20px 0px
+  background-color: $gray-800
+  color: $gray-300
+  padding: 20px 0px 18px 0
   font-size: 1.25rem
-  text-align: right
-  z-index: 2
+  z-index: 1
   position: fixed
   top: 0
-  left: 0
-  width: 100%
-  pointer-events: none
+  left: 20px
 
 /* Modal custom styles */
 
@@ -261,16 +287,18 @@ label
 input, textarea
   width: 100%
   padding: 10px 10px
-  border: 1px solid $gray-400
-  border-radius: 3px
+  background-color: darken($gray-100, 3%)
+  border: 0
+  //border: 1px solid $gray-400
+  border-radius: 5px
   height: 35px
   vertical-align: top
   color: $gray-700
   &:not([type=checkbox]):not([type=radio])
     -webkit-appearance: none // remove shadow on mobile safari
-  &:focus
+  &:focus, &:hover
     outline: 0
-    border: 1px solid $gray-500
+    //border: 1px solid $gray-500
     color: $gray-900
 textarea
   max-width: 100%
@@ -287,15 +315,15 @@ select
   border-radius: 3px
   background-color: transparent
 button
-  background-color: $purple-100
+  background-color: $gray-100
   width: 100%
   vertical-align: middle
   padding: 2px 20px
   height: 35px
   margin: 0
-  border: 1px solid $purple-300
-  border-radius: 3px
-  color: $purple-400
+  border: 1px solid $gray-300
+  border-radius: 10px
+  color: $gray-700
   &:hover, &:focus
     outline: 0
     background-color: $purple-100
@@ -331,24 +359,30 @@ button
     white-space: normal
 
 @media (max-width: 800px)
+  .table_col
+    &.task_col_0
+      width: 10px
+    &.task_col_1
+      width: 150px
+    &.task_col_2
+      width: 200px
+    &.task_col_3
+      //width: 100%
+    &.task_col_4
+      //width: 260px
+  html
+    margin: 0
+
   body
-    font-size: .7rem
-    line-height: 1.4
-  .container
-    padding: 0 5px
-  .sheet, .quick_add_form
-    margin: 0px 0px 10px 0px
-    padding: 15px 10px 15px 10px
+    font-size: .75rem
+    line-height: 1.2
+    background-color: white
 
-  .quick_add_form
-    padding: 15px 10px 15px 10px
+  .box_sheet, .box_filters, .quick_add_form
+    padding: 10px 10px 10px 10px
 
-  .filters_form
-    padding: 0px 0px 20px 0px
-    margin: 10px 0px 20px 0px
   .action_icons
-    max-width: 60px
-    max-height: 60px
+    max-width: 100px
+    max-height: 100px
     flex-wrap: wrap
-    //flex-basis: auto
     gap: 1px
