--- a/template/css/style_Steves-MacBook-Pro.local_Sep-15-203531-2020_Conflict.css
+++ b/template/css/style_Steves-MacBook-Pro.local_Sep-15-203531-2020_Conflict.css
@@ -93,14 +93,6 @@ th:not([align]) {
 /** Purple **/
 /** Pink **/
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
-@-webkit-keyframes spinAround {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(359deg);
-  }
-}
 @keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -109,44 +101,6 @@ th:not([align]) {
     transform: rotate(359deg);
   }
 }
-.container {
-  flex-grow: 1;
-  margin: 0 auto;
-  position: relative;
-  width: auto;
-}
-.container.is-fluid {
-  max-width: none;
-  padding-left: 32px;
-  padding-right: 32px;
-  width: 100%;
-}
-@media screen and (min-width: 1024px) {
-  .container {
-    max-width: 960px;
-  }
-}
-@media screen and (max-width: 1215px) {
-  .container.is-widescreen {
-    max-width: 1152px;
-  }
-}
-@media screen and (max-width: 1407px) {
-  .container.is-fullhd {
-    max-width: 1344px;
-  }
-}
-@media screen and (min-width: 1216px) {
-  .container {
-    max-width: 1152px;
-  }
-}
-@media screen and (min-width: 1408px) {
-  .container {
-    max-width: 1344px;
-  }
-}
-
 .column {
   display: block;
   flex-basis: 0;
@@ -1791,8 +1745,6 @@ th:not([align]) {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
-  min-height: -webkit-min-content;
-  min-height: -moz-min-content;
   min-height: min-content;
 }
 .tile.is-ancestor {
@@ -2246,7 +2198,7 @@ th:not([align]) {
 
 /* Main styles */
 html {
-  background-color: #edf2f7;
+  background: linear-gradient(180deg, #161427 0, black 40%, #230b1c 100%);
   background-attachment: fixed;
   padding: 0;
   margin: 0;
@@ -2289,42 +2241,38 @@ img {
 
 /* Typography */
 h1, h2, .day_header {
-  font-weight: 400;
-  color: #4a5568;
+  font-weight: 300;
+  color: #7f9cf5;
   text-transform: uppercase;
 }
 
 h1, .day_header {
-  font-size: 1.25rem;
+  font-size: 2.25rem;
+  margin: 1.5rem 0 1rem 0;
 }
 
 h2 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin: 2rem 0;
 }
 
 /* Layout */
-.nav {
-  margin: 0px 0px 20px 0px;
-  padding: 20px 20px 10px 20px;
-  background: #fff;
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
+
 .sticky {
-  top: 20px;
+  top: 0px;
   margin-top: 75px;
-  position: -webkit-sticky;
   position: sticky;
 }
 
 .day_header {
   width: 100%;
-  padding: 20px 0 15px 40px;
-  margin: 40px 0 0 0;
+  padding: 10px 0 10px 0px;
   cursor: pointer;
-  border-bottom: 1px solid #e2e8f0;
-}
-.day_header .pretty_day {
-  color: #cbd5e0;
 }
 
 .sheet > .day_header:nth-child(2) {
@@ -2332,16 +2280,26 @@ h2 {
 }
 
 .box_alt {
-  background-color: white;
+  background-color: #f5faff;
   padding: 10px 20px 20px 20px;
   border-radius: 5px;
 }
+
+.box_filters {
+  background-color: #f7fafc;
+  border-bottom: 1px solid #e2e8f0;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin: 20px 0px 0px 0px;
+  padding: 10px 30px 10px 30px;
+}
+
 .box_sheet {
   background-color: #fff;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   margin: 0px 0px 10px 0px;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 30px 20px 30px;
 }
 
 .table_row {
@@ -2351,21 +2309,24 @@ h2 {
 }
 
 .table_col {
-  border-bottom: 1px solid #e2e8f0;
+  border-top: 1px solid #e2e8f0;
   border-: 1px solid #edf2f7;
   padding: 15px 2px 13px 2px;
   vertical-align: top;
 }
 .table_col.task_col_0 {
-  padding-left: 40px;
+  width: 25px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: columns;
 }
 .table_col.task_col_0 div {
-  width: 10px;
+  width: 100%;
   height: 1.5rem;
-  border-radius: 20px;
-  margin-left: -30px;
+  border-radius: 50px;
+  margin-left: 0px;
   margin-right: 5px;
-  margin-top: -3px;
+  margin-top: -5px;
   border: 2px solid white;
 }
 .table_col.task_col_0 div.heat_0 {
@@ -2393,8 +2354,7 @@ h2 {
   width: 100%;
 }
 .table_col.task_col_4 {
-  width: 300px;
-  padding-right: 40px;
+  width: 260px;
 }
 
 .task_duration, .task_project, .task_value, .task_client {
@@ -2431,7 +2391,7 @@ h2 {
 }
 
 .highlighted {
-  background-color: #f7fafc;
+  background-color: #faf5ff;
 }
 .highlighted .action_icons .icon a {
   background: #fff;
@@ -2443,12 +2403,13 @@ h2 {
 }
 
 .icon_svg img {
-  width: 14px;
+  width: 12px;
   height: auto;
+  filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
 }
 .icon_svg a {
   transition: color 0.5s, border-radius 0.5s, background-color 0.5s;
-  background: #f7fafc;
+  background: #faf5ff;
   vertical-align: middle;
   align: center;
   padding: 5px 6px 4px 6px;
@@ -2538,9 +2499,8 @@ label {
 input, textarea {
   width: 100%;
   padding: 10px 10px;
-  background-color: #ecf3f8;
-  border: 0;
-  border-radius: 5px;
+  border: 1px solid #cbd5e0;
+  border-radius: 3px;
   height: 35px;
   vertical-align: top;
   color: #4a5568;
@@ -2550,6 +2510,7 @@ input:not([type=checkbox]):not([type=radio]), textarea:not([type=checkbox]):not(
 }
 input:focus, input:hover, textarea:focus, textarea:hover {
   outline: 0;
+  border: 1px solid #a0aec0;
   color: #1a202c;
 }
 
@@ -2576,15 +2537,15 @@ select {
 }
 
 button {
-  background-color: #f7fafc;
+  background-color: #faf5ff;
   width: 100%;
   vertical-align: middle;
   padding: 2px 20px;
   height: 35px;
   margin: 0;
-  border: 1px solid #e2e8f0;
-  border-radius: 10px;
-  color: #4a5568;
+  border: 1px solid #d6bcfa;
+  border-radius: 3px;
+  color: #b794f4;
 }
 button:hover, button:focus {
   outline: 0;
@@ -2617,8 +2578,7 @@ button:hover, button:focus {
 .pagination a {
   padding: 10px 15px 9px 15px;
   background-color: #fff;
-  -webkit-filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
-          filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
+  filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
 }
 .pagination a.page_current {
   color: #9f7aea;
@@ -2631,22 +2591,12 @@ button:hover, button:focus {
 }
 @media (max-width: 800px) {
   .table_col.task_col_0 {
-    width: 10px;
-  }
-  .table_col.task_col_1 {
-    width: 150px;
-  }
-  .table_col.task_col_2 {
-    width: 200px;
-  }
-  html {
-    margin: 0;
+    width: 15px;
   }
 
   body {
     font-size: 0.75rem;
     line-height: 1.2;
-    background-color: white;
   }
 
   .box_sheet, .box_filters, .quick_add_form {
@@ -2654,8 +2604,8 @@ button:hover, button:focus {
   }
 
   .action_icons {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 60px;
+    max-height: 60px;
     flex-wrap: wrap;
     gap: 1px;
   }
