--- a/template/css/style_bck.css
+++ b/template/css/style_bck.css
@@ -93,6 +93,14 @@ th:not([align]) {
 /** Purple **/
 /** Pink **/
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
+@-webkit-keyframes spinAround {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
 @keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -101,6 +109,44 @@ th:not([align]) {
     transform: rotate(359deg);
   }
 }
+.container {
+  flex-grow: 1;
+  margin: 0 auto;
+  position: relative;
+  width: auto;
+}
+.container.is-fluid {
+  max-width: none;
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 100%;
+}
+@media screen and (min-width: 1024px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media screen and (max-width: 1215px) {
+  .container.is-widescreen {
+    max-width: 1152px;
+  }
+}
+@media screen and (max-width: 1407px) {
+  .container.is-fullhd {
+    max-width: 1344px;
+  }
+}
+@media screen and (min-width: 1216px) {
+  .container {
+    max-width: 1152px;
+  }
+}
+@media screen and (min-width: 1408px) {
+  .container {
+    max-width: 1344px;
+  }
+}
+
 .column {
   display: block;
   flex-basis: 0;
@@ -1745,6 +1791,8 @@ th:not([align]) {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
+  min-height: -webkit-min-content;
+  min-height: -moz-min-content;
   min-height: min-content;
 }
 .tile.is-ancestor {
@@ -2287,7 +2335,8 @@ h4 {
 .box {
   background-color: #fff;
   border-radius: 2px;
-  filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
+  -webkit-filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
+          filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
 }
 
 .sheet, .filters_form, .quick_add_form {
@@ -2399,7 +2448,8 @@ h4 {
 .icon_svg img {
   width: 15px;
   height: auto;
-  filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
+  -webkit-filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
+          filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
 }
 .icon_svg a {
   transition: color 0.5s, border-radius 0.5s, background-color 0.5s;
@@ -2529,7 +2579,8 @@ button:hover {
 .pagination a {
   padding: 10px 15px 9px 15px;
   background-color: #fff;
-  filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
+  -webkit-filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
+          filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
 }
 .pagination a.page_current {
   color: #9f7aea;
