--- a/template/css/style_bck2.css
+++ b/template/css/style_bck2.css
@@ -2246,8 +2246,7 @@ th:not([align]) {
 
 /* Main styles */
 html {
-  background-color: #edf2f7;
-  background-attachment: fixed;
+  background: #e2e8f0;
   padding: 0;
   margin: 0;
   overflow: -moz-scrollbars-vertical;
@@ -2261,6 +2260,7 @@ body {
   font-size: 0.8rem;
   line-height: 1.2rem;
   font-weight: 400;
+  margin-top: 30px;
 }
 
 textarea, input, button, select {
@@ -2289,116 +2289,126 @@ img {
 
 /* Typography */
 h1, h2, .day_header {
-  font-weight: 400;
-  color: #4a5568;
+  font-weight: 300;
+  color: #cbd5e0;
   text-transform: uppercase;
 }
 
 h1, .day_header {
-  font-size: 1.25rem;
+  font-size: 2.5rem;
+  margin: 1.5rem 0 1rem 0;
 }
 
 h2 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin: 2rem 0;
 }
 
 /* Layout */
-.nav {
-  margin: 0px 0px 20px 0px;
-  padding: 20px 20px 10px 20px;
-  background: #fff;
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
+
 .sticky {
-  top: 20px;
-  margin-top: 75px;
+  top: 80px;
   position: -webkit-sticky;
   position: sticky;
 }
 
 .day_header {
   width: 100%;
-  padding: 20px 0 15px 40px;
-  margin: 40px 0 0 0;
+  padding: 10px 0 10px 0px;
   cursor: pointer;
-  border-bottom: 1px solid #e2e8f0;
-}
-.day_header .pretty_day {
-  color: #cbd5e0;
 }
 
 .sheet > .day_header:nth-child(2) {
   padding-top: 0;
 }
 
-.box_alt {
-  background-color: white;
-  padding: 10px 20px 20px 20px;
+.box {
+  background-color: #fff;
   border-radius: 5px;
 }
-.box_sheet {
-  background-color: #fff;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+
+.box_alt {
+  background-color: #f4f7fa;
+  border-radius: 5px;
+}
+
+.sheet, .quick_add_form {
   margin: 0px 0px 10px 0px;
-  padding: 20px 0px 20px 0px;
+  padding: 30px 40px 30px 40px;
+}
+
+.quick_add_form {
+  padding: 30px 20px 30px 20px;
+}
+
+.filters_form {
+  padding: 0px 0px 40px 0px;
+  margin: 20px 0px 50px 0px;
+  border-bottom: 1px solid #cbd5e0;
+}
+
+.table {
+  display: table;
+  width: 100%;
 }
 
 .table_row {
-  display: flex;
-  flex-direction: row;
-  flex-grow: 1;
+  display: table-row;
 }
 
 .table_col {
-  border-bottom: 1px solid #e2e8f0;
-  border-: 1px solid #edf2f7;
-  padding: 15px 2px 13px 2px;
+  display: table-cell;
+  border-top: 1px solid #e2e8f0;
+  padding: 15px 5px 13px 5px;
   vertical-align: top;
 }
-.table_col.task_col_0 {
-  padding-left: 40px;
-}
-.table_col.task_col_0 div {
-  width: 10px;
-  height: 1.5rem;
-  border-radius: 20px;
-  margin-left: -30px;
-  margin-right: 5px;
-  margin-top: -3px;
-  border: 2px solid white;
-}
-.table_col.task_col_0 div.heat_0 {
-  background-color: #caefff;
-}
-.table_col.task_col_0 div.heat_1 {
-  background-color: #e9ef9c;
-}
-.table_col.task_col_0 div.heat_2 {
-  background-color: #ffc33b;
-}
-.table_col.task_col_0 div.heat_3 {
-  background-color: #ff6a38;
-}
-.table_col.task_col_0 div.heat_4 {
-  background-color: #ff1d16;
-}
 .table_col.task_col_1 {
-  width: 200px;
+  width: 100px;
 }
 .table_col.task_col_2 {
-  width: 300px;
+  width: 200px;
 }
 .table_col.task_col_3 {
-  width: 100%;
+  width: auto;
 }
 .table_col.task_col_4 {
-  width: 300px;
-  padding-right: 40px;
+  width: 160px;
+}
+.table_col.task_col_graph {
+  width: 10px;
+}
+.table_col.task_col_graph div {
+  width: 18px;
+  height: 18px;
+  border-radius: 50px;
+  margin-left: 0px;
+  margin-right: 5px;
+  border: 2px solid white;
+  vertical-align: baseline;
+}
+.table_col.task_col_graph div.heat_0 {
+  background-color: #caefff;
+}
+.table_col.task_col_graph div.heat_1 {
+  background-color: #e9ef9c;
+}
+.table_col.task_col_graph div.heat_2 {
+  background-color: #ffc33b;
+}
+.table_col.task_col_graph div.heat_3 {
+  background-color: #ff6a38;
+}
+.table_col.task_col_graph div.heat_4 {
+  background-color: #ff1d16;
 }
 
 .task_duration, .task_project, .task_value, .task_client {
-  font-size: 1.1rem;
+  font-size: 1.25rem;
   font-weight: 500;
   margin-left: -0.05em;
 }
@@ -2431,27 +2441,28 @@ h2 {
 }
 
 .highlighted {
-  background-color: #f7fafc;
+  background-color: #faf5ff;
 }
 .highlighted .action_icons .icon a {
   background: #fff;
 }
 
 .action_icons {
-  display: flex;
-  justify-content: flex-end;
+  text-align: right;
 }
 
 .icon_svg img {
-  width: 14px;
+  width: 15px;
   height: auto;
+  -webkit-filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
+          filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
 }
 .icon_svg a {
   transition: color 0.5s, border-radius 0.5s, background-color 0.5s;
-  background: #f7fafc;
+  background: #faf5ff;
   vertical-align: middle;
   align: center;
-  padding: 5px 6px 4px 6px;
+  padding: 10px 11px 7px 11px;
   border-radius: 5px;
   line-height: 1;
   display: inline-block;
@@ -2463,7 +2474,7 @@ h2 {
   border-radius: 10px;
 }
 .icon_svg a.modal_update {
-  padding: 5px 5px 4px 7px;
+  padding: 9px 9px 8px 13px;
 }
 
 ion-icon {
@@ -2473,14 +2484,18 @@ ion-icon {
 /* Floating bar where the tally goes */
 #floating_bar {
   display: none;
-  background-color: #2d3748;
-  color: #e2e8f0;
-  padding: 20px 0px 18px 0;
+  text-align: center;
+  background-color: rgba(247, 250, 252, 0.5);
+  color: #718096;
+  padding: 20px 0px;
   font-size: 1.25rem;
-  z-index: 1;
+  text-align: right;
+  z-index: 2;
   position: fixed;
   top: 0;
-  left: 20px;
+  left: 0;
+  width: 100%;
+  pointer-events: none;
 }
 
 /* Modal custom styles */
@@ -2538,9 +2553,8 @@ label {
 input, textarea {
   width: 100%;
   padding: 10px 10px;
-  background-color: #ecf3f8;
-  border: 0;
-  border-radius: 5px;
+  border: 1px solid #cbd5e0;
+  border-radius: 3px;
   height: 35px;
   vertical-align: top;
   color: #4a5568;
@@ -2548,8 +2562,9 @@ input, textarea {
 input:not([type=checkbox]):not([type=radio]), textarea:not([type=checkbox]):not([type=radio]) {
   -webkit-appearance: none;
 }
-input:focus, input:hover, textarea:focus, textarea:hover {
+input:focus, textarea:focus {
   outline: 0;
+  border: 1px solid #a0aec0;
   color: #1a202c;
 }
 
@@ -2576,15 +2591,15 @@ select {
 }
 
 button {
-  background-color: #f7fafc;
+  background-color: #faf5ff;
   width: 100%;
   vertical-align: middle;
   padding: 2px 20px;
   height: 35px;
   margin: 0;
-  border: 1px solid #e2e8f0;
-  border-radius: 10px;
-  color: #4a5568;
+  border: 1px solid #d6bcfa;
+  border-radius: 3px;
+  color: #b794f4;
 }
 button:hover, button:focus {
   outline: 0;
@@ -2628,35 +2643,33 @@ button:hover, button:focus {
   .task_project {
     white-space: normal;
   }
-}
-@media (max-width: 800px) {
-  .table_col.task_col_0 {
-    width: 10px;
-  }
+
   .table_col.task_col_1 {
-    width: 150px;
+    width: 15%;
   }
   .table_col.task_col_2 {
-    width: 200px;
+    width: 20%;
   }
-  html {
-    margin: 0;
+  .table_col.task_col_3 {
+    width: 50%;
   }
-
-  body {
-    font-size: 0.75rem;
-    line-height: 1.2;
-    background-color: white;
-  }
-
-  .box_sheet, .box_filters, .quick_add_form {
-    padding: 10px 10px 10px 10px;
+}
+@media (max-width: 900px) {
+  .logo {
+    max-width: 120px;
+    margin: 0 auto;
   }
 
-  .action_icons {
-    max-width: 100px;
-    max-height: 100px;
-    flex-wrap: wrap;
-    gap: 1px;
+  .table_col.task_col_1 {
+    width: 15%;
+  }
+  .table_col.task_col_2 {
+    width: 20%;
+  }
+  .table_col.task_col_3 {
+    width: 45%;
+  }
+  .table_col .icon_svg a {
+    padding: 5px 6px 5px 6px;
   }
 }
