--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -4,7 +4,7 @@
 $link: $purple-300
 $link-hover: $purple-400
 $column-gap: 10px
-$family-sans-serif: Heebo, sans-serif
+$family-sans-serif: 'Heebo', sans-serif
 
 @import "_bulma.sass"
 
@@ -19,17 +19,20 @@ html
   overflow: -moz-scrollbars-vertical
   overflow-y: scroll // these fix the modal issue where it removes scrollbar and bungs layout
   text-rendering: optimizeLegibility
-  //text-edge: cap alphabetic // these two don't actually work just yet.
-  //leading-trim: both // these two don't actually work just yet.
+
 body
   font-family: $family-sans-serif
   color: $gray-800
-  font-size: .8rem
-  line-height: 1.2rem
+  font-size: .9rem
+  line-height: 1.4rem
   font-weight: 400
+  *
+    //outline: 1px solid red
+
 textarea, input, button, select
   font-size: inherit
   font-family: inherit // FF needs these
+
 a
   color: $link
   text-decoration: none
@@ -37,6 +40,7 @@ a
   &:hover
     color: $link-hover
     transition: all .3s
+
 img
   width: 100%
   height: auto
@@ -47,55 +51,35 @@ img
 /* Typography */
 
 h1, h2, .day_header
-  font-weight: 400
-  color: $gray-700
-  text-transform: uppercase
+  font-size: 1.5rem
+  font-weight: 600
+  color: $gray-500
+  //text-transform: uppercase
 
-h1, .day_header
-  font-size: 1.25rem
-  // margin: 2rem 0 1rem 0
 h2
-  font-size: 1rem
+  //font-size: 1.5rem
   margin: 2rem 0
 
 /* Layout */
-
-.container
-  //max-width: 1300px
-  //margin: 0 auto
 
 .nav
   margin: 0px 0px 20px 0px
   padding: 20px 20px 10px 20px
   background: $white
-  .container
-    //
-
-.sticky
-  top: 20px
-  margin-top: 75px
   position: sticky
-  //display: none
+  top: 0
 
 .day_header
   width: 100%
-  padding: 20px 0 15px 40px
+  padding: 20px 0 15px 58px
   margin: 40px 0 0 0
   cursor: pointer
   border-bottom: 1px solid $gray-300
-  // position: relative
-  // &::before
-  //   content: ''
-  //   display: inline-block
-  //   height: 10px
-  //   width: 10px
-  //   background-color: $gray-200
-  //   position: absolute
-  //   border-radius: 100%
-  //   left: -20px
-  //   top: 35%
+  .pretty_date
+    padding-right: .5rem 
   .pretty_day
     color: $gray-400
+    font-weight: 400
 .sheet > .day_header:nth-child(2)
   padding-top: 0
 
@@ -103,16 +87,6 @@ h2
   background-color: lighten($indigo-100, 5%)
   padding: 10px 20px 20px 20px
   border-radius: 5px
-  *
-    //outline: 1px solid red
-
-.box_filters
-  // background-color: lighten($gray-100, 4%)
-  // border-bottom: 1px solid $gray-300
-  // border-top-left-radius: 5px
-  // border-top-right-radius: 5px
-  // margin: 20px 0px 0px 0px
-  // padding: 10px 30px 10px 30px
 
 .box_sheet
   background-color: $white
@@ -135,28 +109,35 @@ h2
   border-: 1px solid $gray-200
   padding: 15px 2px 13px 2px
   vertical-align: top
-  &.task_col_0
-    padding-left: 40px
-    div
-      width: 10px
-      height: 1.5rem
-      border-radius: 20px
-      margin-left: -30px
-      margin-right: 5px
-      margin-top: -3px
-      border: 2px solid white
-      &.heat_0
-        background-color: #caefff
-      &.heat_1
-        background-color: #e9ef9c
-      &.heat_2
-        background-color: #ffc33b
-      &.heat_3
-        background-color: #ff6a38
-      &.heat_4
-        background-color: #ff1d16
   &.task_col_1
+    padding-left: 60px
     width: 200px
+    position: relative
+  &.heat_0, &.heat_1, &.heat_2, &.heat_3, &.heat_4
+    &::before
+      content: ''
+      display: block
+      position: absolute
+      width: 5px
+      height: 2.5rem
+      border-radius: 20px
+      left: 10px
+      outline: 2px solid white
+    &.heat_0
+      &::before
+        background-color: #caefff
+    &.heat_1
+      &::before
+        background-color: #e9ef9c
+    &.heat_2
+      &::before
+        background-color: #ffc33b
+    &.heat_3
+      &::before
+        background-color: #ff6a38
+    &.heat_4
+      &::before
+        background-color: #ff1d16
   &.task_col_2
     width: 300px
   &.task_col_3
@@ -165,9 +146,10 @@ h2
     width: 300px
     padding-right: 40px
   
-
+.task_duration, .task_value, .task_duration_label
+  letter-spacing: -.03em
 .task_duration, .task_project, .task_value, .task_client
-  font-size: 1.1rem
+  font-size: 1.3rem
   font-weight: 500
   margin-left: -.05em // pedantic nudging so the larger text lines up a little nicer with text underneath
 
@@ -184,7 +166,7 @@ h2
 .task_value_currency
   font-size: .75rem
   vertical-align: 6%
-  margin-right: 1px
+  margin-right: 2px
 
 .cell_alignright
   text-align: right
@@ -203,7 +185,7 @@ h2
   justify-content: flex-end
 .icon_svg
   img
-    width: 14px
+    width: 18px
     height: auto
     //filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%) // hehe
   a
@@ -228,22 +210,16 @@ ion-icon
 
 /* Floating bar where the tally goes */
 
-#floating_bar
-  display: none
-  background-color: $gray-800
-  color: $gray-300
-  padding: 20px 0px 18px 0
+#tally
+  color: $gray-500
   font-size: 1.25rem
-  z-index: 1
-  position: fixed
-  top: 0
-  left: 20px
+  display: none
 
 /* Modal custom styles */
 
 .modal
   padding: 20px 20px 40px 20px
-  background-color: lighten($purple-100, 1%)
+  background-color: $white
   a.close-modal
     top: 2.5px !important
     right: 2.5px !important
@@ -287,7 +263,7 @@ label
 input, textarea
   width: 100%
   padding: 10px 10px
-  background-color: darken($gray-100, 3%)
+  background-color: darken($gray-100, 2%)
   border: 0
   //border: 1px solid $gray-400
   border-radius: 5px
@@ -302,6 +278,7 @@ input, textarea
     color: $gray-900
 textarea
   max-width: 100%
+  min-height: 4rem
   max-height: 500px
   padding: 8px 10px
   resize: none
@@ -359,30 +336,33 @@ button
     white-space: normal
 
 @media (max-width: 800px)
+  input, select, textarea
+    font-size: 1rem // stops ios safari zooming in on inputs and not zooming out when done
+  .day_header
+    padding-left: 30px
   .table_col
-    &.task_col_0
-      width: 10px
     &.task_col_1
-      width: 150px
+      width: 220px
+      padding-left: 30px
     &.task_col_2
-      width: 200px
+      width: 280px
     &.task_col_3
       //width: 100%
     &.task_col_4
-      //width: 260px
+      padding-right: 10px
   html
     margin: 0
 
   body
-    font-size: .75rem
-    line-height: 1.2
-    background-color: white
+    font-size: .8rem
+    line-height: 1.3
+    //background-color: white
 
   .box_sheet, .box_filters, .quick_add_form
     padding: 10px 10px 10px 10px
 
   .action_icons
-    max-width: 100px
-    max-height: 100px
+    max-width: 80px
+    max-height: 80px
     flex-wrap: wrap
     gap: 1px
