Fixed up navbar a bit

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -2301,7 +2301,7 @@ h2 {
 /* Layout */
 .nav {
   margin: 0px 0px 10px 0px;
-  padding: 40px 20px 30px 20px;
+  padding: 40px 0 30px 0;
   background: #fff;
   position: -webkit-sticky;
   position: sticky;
@@ -2312,7 +2312,7 @@ h2 {
 }
 
 .nav_shrink {
-  padding: 20px 20px 10px 20px;
+  padding: 10px 0 0px 0;
 }
 
 .day_header {
@@ -2333,10 +2333,8 @@ h2 {
   padding-top: 0;
 }
 
-.box_alt {
-  background-color: white;
+.box_nav {
   padding: 10px 20px 20px 20px;
-  border-radius: 5px;
 }
 
 .box_sheet {
@@ -2511,10 +2509,14 @@ ion-icon {
 }
 
 /* Floating bar where the tally goes */
-#tally {
-  color: #a0aec0;
+.tally {
+  color: #0087ff;
   font-size: 1.25rem;
-  display: none;
+  height: 100%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  background-color: #f5faff;
 }
 
 /* Modal custom styles */
@@ -2701,8 +2703,9 @@ button:hover, button:focus {
     padding-right: 10px;
   }
 
-  .box_sheet, .box_filters, .quick_add_form {
+  .box_sheet, .box_filters, .box_nav {
     padding: 10px 10px 10px 10px;
+    margin: 0 10px;
   }
 
   .action_icons {
