--- a/template/css/sass/form/tools.sass
+++ b/template/css/sass/form/tools.sass
@@ -3,11 +3,13 @@ $label-weight: $weight-bold !default
 
 $help-size: $size-small !default
 
+$label-colors: $form-colors !default
+
 .label
-  color: $label-color
+  //color: $label-color
   display: block
-  font-size: $size-normal
-  font-weight: $label-weight
+  //font-size: $size-normal
+  //font-weight: $label-weight
   &:not(:last-child)
     margin-bottom: 0.5em
   // Sizes
@@ -22,7 +24,7 @@ $help-size: $size-small !default
   display: block
   font-size: $help-size
   margin-top: 0.25rem
-  @each $name, $pair in $colors
+  @each $name, $pair in $label-colors
     $color: nth($pair, 1)
     &.is-#{$name}
       color: $color
